# i3-revive

./: Cargo.toml  README.md
src/: config.rs  i3_save_tree.rs  i3_tree.rs  i3ipc.rs  lib.rs  main.rs  metadata.rs  process.rs
